--- a/mainMenu/mainMenu.html
+++ b/mainMenu/mainMenu.html
@@ -36,7 +36,7 @@
 
       for (i = 0; i < deckNames.length; ++i) {
         const deck = document.createElement("DIV");
-        deck.setAttribute("id", "deck");
+        deck.setAttribute("class", "deck");
         const deckName = document.createTextNode(deckNames[i]);
 
         deck.appendChild(deckName);
